# pink-parquet

./: .output.txt  .prettierrc  CHANGELOG.md  Claude.md  DEVELOPMENT_PLAN.md  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: settings.local.json
.github/: FUNDING.yml
src/: app.config.ts  app.css  app.html  app.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data_loader/: csv_loader.rs  dataframe_processor.rs  mod.rs  parquet_loader.rs
src/assets/css/: main.css  variables.css
src/assets/primevue/: button.css  popover.css  progressspinner.css  select.css  selectbutton.css  tailwind.css  togglebutton.css
src/components/: ActionBtn.vue  AppContainer.vue  AppInfo.vue  AppLogo.vue  AppStatus.vue  AppTable.vue  ColumnInfo.vue  DtypeIcon.vue  FileLoader.vue  FilterConditions.vue  FilterPanel.vue  Popover.vue  PpDatePicker.vue  PpPanel.vue  StatsDetails.vue  StatsDetailsDate.vue  StatsDetailsDatetime.vue  StatsDetailsDuration.vue  StatsDetailsNumeric.vue  StatsDetailsOther.vue  StatsDetailsTime.vue  TableContainer.vue  TableInfo.vue  TimePicker.vue
src/components/app/: AppBtnPrimary.vue  AppSwitch.vue
src/composables/: use-load-config.ts
src/layouts/: default.vue
src/pages/: index.vue  settings.vue
src/routes/: +layout.svelte  +page.svelte
src/stores/: config-store.ts  data-store.ts  table-store.ts
src/types/: app-types.ts
src/utils/: dtype-cleaner.ts  format.ts  path.ts
(+93 files in other folders)
