[package]
name = "pinkparquet"
version = "2.0.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "pinkparquet"

[profile.dev]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pinkparquet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
polars = { version = "0.52.0", features = ["full", "sql"] }
parquet = "57.1.0"
chrono = "0.4"
hex = "0.4"
notify = "8"

